--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ markdown-it-py            3.0.0
 MarkupSafe                2.1.5
 mdurl                     0.1.2
 numpy                     1.26.4
+package_name              0.1
 packaging                 23.2
 pandas                    2.2.0
 pillow                    10.2.0
@@ -31,7 +32,6 @@ Pygments                  2.17.2
 python-dateutil           2.8.2
 pytz                      2024.1
 referencing               0.33.0
-reqs                      0.0.2
 requests                  2.31.0
 rich                      13.7.0
 rpds-py                   0.17.1
